# RealRT

./: .gitignore  README.md
Doc/: RTEngineUML.class.violet.html
Source/: CMakeLists.txt
Source/RTEngine/: AsyncRenderStrategy.hpp  CMakeLists.txt  IterativeTraceStrategy.cpp  IterativeTraceStrategy.hpp  Light.cpp  Light.hpp  MSphere.cpp  MSphere.h  Material.cpp  Material.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Plane.cpp  Plane.hpp  PointLight.cpp  PointLight.hpp  RTEngine.cpp  RTEngine.h  RTEngine.hpp  Ray.cpp  Ray.hpp  RecursiveTraceStrategy.cpp  RecursiveTraceStrategy.hpp  Shape.cpp  Shape.hpp  Shape3D.h  Sphere.cpp  Sphere.hpp  SphereicalLight.cpp  SphereicalLight.h  SphereicalLight.hpp  SphericalLight.cpp  SphericalLight.hpp  SyncRenderStrategy.cpp  SyncRenderStrategy.hpp  Vector3D.cpp  Vector3D.h  Vector3D.hpp  gmath.h  light.h  (+5 more)
Source/RefractionTest/: CMakeLists.txt  RefractionTest.cpp
Source/SphereTest/: CMakeLists.txt  SphereTest.cpp
